# EarthShine

./: README.md
background_and_signal_acceptance_studies/: PROTOTYPING_detector_simulations.ipynb  PROTOTYPING_eloss_code.ipynb  debugging.ipynb  detector_simulation_tools.py  dm_generation_tools.py  generate_signal_events.ipynb
geant4_simulations/: CMakeLists.txt  RUN_GEANT.sh  examine_muons_through_rock.ipynb  run.mac  vis.mac
geant4_simulations/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
geant4_simulations/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  main.cc
